--- a/hamburger-engine.vcxproj.filters
+++ b/hamburger-engine.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="src\engine\SoundManager.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
+    <ClCompile Include="src\engine\Log.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\AnimatedSprite.h">
