move makefile stuff to their own folder

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ VisualC/hamburger-engine.vcxproj.user
 /VisualC/Debug/assets
 /VisualC/Release/assets
 /VisualC/x64/Release/assets
+/Makefiles/build
