--- a/VisualC/hamburger-engine.vcxproj.filters
+++ b/VisualC/hamburger-engine.vcxproj.filters
@@ -128,5 +128,8 @@
     <ClCompile Include="..\src\stb_image_impl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\engine\Paths.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
