--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ VisualC/hamburger-engine.vcxproj.user
 /VisualC/x64/Release/assets
 /Makefiles/build
 /logs
+Makefiles/antiLogic-HE/AntiLogic \[01ee18c0f6dd0000\].nsp
+/Makefiles/antiLogic-HE
+Makefiles/antiLogic-HE_EXTRACT_TO_SWITCH_FOLDER.zip
