--- a/platforms/VisualC/hamburger-engine.vcxproj.filters
+++ b/platforms/VisualC/hamburger-engine.vcxproj.filters
@@ -80,56 +80,56 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\engine\AnimatedSprite.cpp">
+    <ClCompile Include="..\..\src\engine\AnimatedSprite.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Camera.cpp">
+    <ClCompile Include="..\..\src\engine\Camera.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Discord.cpp">
+    <ClCompile Include="..\..\src\engine\Discord.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Engine.cpp">
+    <ClCompile Include="..\..\src\engine\Engine.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Input.cpp">
+    <ClCompile Include="..\..\src\engine\Input.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Log.cpp">
+    <ClCompile Include="..\..\src\engine\Log.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\SDLManager.cpp">
+    <ClCompile Include="..\..\src\engine\Paths.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Sound.cpp">
+    <ClCompile Include="..\..\src\engine\SDLManager.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\SoundManager.cpp">
+    <ClCompile Include="..\..\src\engine\Sound.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Sprite.cpp">
+    <ClCompile Include="..\..\src\engine\SoundManager.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\State.cpp">
+    <ClCompile Include="..\..\src\engine\Sprite.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\engine\Text.cpp">
+    <ClCompile Include="..\..\src\engine\State.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\gameName\states\PlayState.cpp">
+    <ClCompile Include="..\..\src\engine\Text.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\gameName\states\PlayState.cpp">
       <Filter>Source Files\gameName\states</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\gameName\substates\PauseSubState.cpp">
+    <ClCompile Include="..\..\src\gameName\substates\PauseSubState.cpp">
       <Filter>Source Files\gameName\substates</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\main.cpp">
+    <ClCompile Include="..\..\src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\stb_image_impl.cpp">
+    <ClCompile Include="..\..\src\stb_image_impl.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\engine\Paths.cpp">
-      <Filter>Source Files\engine</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
