--- a/platforms/VisualC/hamburger-engine.vcxproj
+++ b/platforms/VisualC/hamburger-engine.vcxproj
@@ -19,23 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\engine\AnimatedSprite.h" />
-    <ClInclude Include="src\engine\Camera.h" />
-    <ClInclude Include="src\engine\Discord.h" />
-    <ClInclude Include="src\engine\Engine.h" />
-    <ClInclude Include="src\engine\Input.h" />
-    <ClInclude Include="src\engine\Sound.h" />
-    <ClInclude Include="src\engine\SoundManager.h" />
-    <ClInclude Include="src\engine\Sprite.h" />
-    <ClInclude Include="src\engine\State.h" />
-    <ClInclude Include="src\engine\SubState.h" />
-    <ClInclude Include="src\engine\Text.h" />
-    <ClInclude Include="src\gameName\states\PlayState.h" />
-    <ClInclude Include="src\gameName\substates\PauseSubState.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="..\..\src\engine\AnimatedSprite.cpp" />
     <ClCompile Include="..\..\src\engine\Camera.cpp" />
+    <ClCompile Include="..\..\src\engine\DebugUI.cpp" />
     <ClCompile Include="..\..\src\engine\Discord.cpp" />
     <ClCompile Include="..\..\src\engine\Engine.cpp" />
     <ClCompile Include="..\..\src\engine\Input.cpp" />
