--- a/platforms/VisualC/hamburger-engine.vcxproj.filters
+++ b/platforms/VisualC/hamburger-engine.vcxproj.filters
@@ -16,18 +16,6 @@
     <Filter Include="Source Files\engine">
       <UniqueIdentifier>{20fc9885-a95d-4bba-a6f3-d258b9d50b58}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\engine">
-      <UniqueIdentifier>{a4b7f3a0-adda-4c6a-8a1a-3e4572fa7b4c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\gameName">
-      <UniqueIdentifier>{e23485ee-5a11-4ca0-b082-3740f0eaa1f7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\gameName\states">
-      <UniqueIdentifier>{262f600e-ec94-4b1a-9acb-4b1aa523e5aa}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\gameName\substates">
-      <UniqueIdentifier>{64f8144d-652b-47a7-9faf-a82d39766042}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\gameName">
       <UniqueIdentifier>{156c58a3-e6a0-45ed-a362-45f52045c5fd}</UniqueIdentifier>
     </Filter>
@@ -37,47 +25,6 @@
     <Filter Include="Source Files\gameName\substates">
       <UniqueIdentifier>{0307a0e7-098d-4698-bf1e-7d4d5c71c015}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\engine\AnimatedSprite.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\Camera.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\Discord.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\Engine.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\Input.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\Sound.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\SoundManager.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\Sprite.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\State.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\SubState.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\engine\Text.h">
-      <Filter>Header Files\engine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\gameName\states\PlayState.h">
-      <Filter>Header Files\gameName\states</Filter>
-    </ClInclude>
-    <ClInclude Include="src\gameName\substates\PauseSubState.h">
-      <Filter>Header Files\gameName\substates</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\engine\AnimatedSprite.cpp">
@@ -130,6 +77,9 @@
     </ClCompile>
     <ClCompile Include="..\..\src\stb_image_impl.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\engine\DebugUI.cpp">
+      <Filter>Source Files\engine</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
