--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ platforms/VisualC/hamburger-engine.vcxproj.user
 /platforms/VisualC/Release
 /platforms/VisualC/Debug
 /.vscode
+platforms/VisualC/hamburger-engine/x64/Release/hamburger-engine.vcxproj.FileListAbsolute.txt
