--- a/platforms/VisualC/hamburger-engine.vcxproj.filters
+++ b/platforms/VisualC/hamburger-engine.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClCompile Include="..\..\src\engine\DebugUI.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\engine\Button.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
