--- a/platforms/VisualC/hamburger-engine.vcxproj
+++ b/platforms/VisualC/hamburger-engine.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="..\..\src\engine\State.cpp" />
     <ClCompile Include="..\..\src\engine\Text.cpp" />
     <ClCompile Include="..\..\src\engine\VideoPlayer.cpp" />
+    <ClCompile Include="..\..\src\gameName\states\BaseState.cpp" />
     <ClCompile Include="..\..\src\gameName\states\PlayState.cpp" />
     <ClCompile Include="..\..\src\gameName\states\VideoState.cpp" />
     <ClCompile Include="..\..\src\gameName\substates\PauseSubState.cpp" />
@@ -191,7 +192,9 @@ swscale.lib</AdditionalDependencies>
 
 XCOPY "$(ProjectDir)..\..\external\discord-rpc\dll\x64\*.*" "$(TargetDir)" /Y
 
-xcopy /Y "$(ProjectDir)..\..\external\ffmpeg\bin\*.dll" "$(OutDir)"</Command>
+xcopy /Y "$(ProjectDir)..\..\external\ffmpeg\bin\*.dll" "$(OutDir)"
+
+xcopy /Y "$(ProjectDir)..\..\external\dll\*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>copies shit</Message>
@@ -229,7 +232,9 @@ swscale.lib</AdditionalDependencies>
 
 XCOPY "$(ProjectDir)..\..\external\discord-rpc\dll\x64\*.*" "$(TargetDir)" /Y
 
-xcopy /Y "$(ProjectDir)..\..\external\ffmpeg\bin\*.dll" "$(OutDir)"</Command>
+xcopy /Y "$(ProjectDir)..\..\external\ffmpeg\bin\*.dll" "$(OutDir)"
+
+xcopy /Y "$(ProjectDir)..\..\external\dll\*.dll" "$(OutDir)"</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>copies shit</Message>
