--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ platforms/VisualC/hamburger-engine.vcxproj.user
 /platforms/VisualC/Debug
 /.vscode
 platforms/VisualC/hamburger-engine/x64/Release/hamburger-engine.vcxproj.FileListAbsolute.txt
+platforms/VisualC/hamburger-engine/x64/Debug/hamburger-engine.vcxproj.FileListAbsolute.txt
