--- a/platforms/Makefiles/MakeFile.nx
+++ b/platforms/Makefiles/MakeFile.nx
@@ -38,9 +38,9 @@ include $(DEVKITPRO)/libnx/switch_rules
 #---------------------------------------------------------------------------------
 TARGET		:=	hamburger-engine
 BUILD		:=	build
-SOURCES		:=	../../src ../../src/engine ../../src/gameName ../../src/gameName/states ../../src/gameName/substates
+SOURCES		:=	../../src ../../src/engine ../../src/engine/audio ../../src/engine/core ../../src/engine/debug ../../src/engine/graphics ../../src/engine/input ../../src/engine/utils ../../src/gameName ../../src/gameName/states ../../src/gameName/substates
 DATA		:=	data
-INCLUDES	:=	../../src ../../src/engine ../../src/gameName ../../src/gameName/states ../../src/gameName/substates
+INCLUDES	:=	../../src ../../src/engine ../../src/engine/audio ../../src/engine/core ../../src/engine/debug ../../src/engine/graphics ../../src/engine/input ../../src/engine/utils ../../src/gameName ../../src/gameName/states ../../src/gameName/substates
 ROMFS	:=	../NX/romfs
 
 APP_TITLE := "Hamburger Engine"
