--- a/platforms/VisualC/hamburger-engine.vcxproj
+++ b/platforms/VisualC/hamburger-engine.vcxproj
@@ -19,22 +19,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\engine\AnimatedSprite.cpp" />
-    <ClCompile Include="..\..\src\engine\Button.cpp" />
-    <ClCompile Include="..\..\src\engine\Camera.cpp" />
-    <ClCompile Include="..\..\src\engine\DebugUI.cpp" />
-    <ClCompile Include="..\..\src\engine\Discord.cpp" />
-    <ClCompile Include="..\..\src\engine\Engine.cpp" />
-    <ClCompile Include="..\..\src\engine\Input.cpp" />
-    <ClCompile Include="..\..\src\engine\Log.cpp" />
-    <ClCompile Include="..\..\src\engine\Paths.cpp" />
-    <ClCompile Include="..\..\src\engine\SDLManager.cpp" />
-    <ClCompile Include="..\..\src\engine\Sound.cpp" />
-    <ClCompile Include="..\..\src\engine\SoundManager.cpp" />
-    <ClCompile Include="..\..\src\engine\Sprite.cpp" />
-    <ClCompile Include="..\..\src\engine\State.cpp" />
-    <ClCompile Include="..\..\src\engine\Text.cpp" />
-    <ClCompile Include="..\..\src\engine\VideoPlayer.cpp" />
+    <ClCompile Include="..\..\src\engine\audio\Sound.cpp" />
+    <ClCompile Include="..\..\src\engine\audio\SoundManager.cpp" />
+    <ClCompile Include="..\..\src\engine\core\Engine.cpp" />
+    <ClCompile Include="..\..\src\engine\core\SDLManager.cpp" />
+    <ClCompile Include="..\..\src\engine\core\State.cpp" />
+    <ClCompile Include="..\..\src\engine\debug\DebugUI.cpp" />
+    <ClCompile Include="..\..\src\engine\graphics\AnimatedSprite.cpp" />
+    <ClCompile Include="..\..\src\engine\graphics\Button.cpp" />
+    <ClCompile Include="..\..\src\engine\graphics\Camera.cpp" />
+    <ClCompile Include="..\..\src\engine\graphics\Sprite.cpp" />
+    <ClCompile Include="..\..\src\engine\graphics\Text.cpp" />
+    <ClCompile Include="..\..\src\engine\graphics\VideoPlayer.cpp" />
+    <ClCompile Include="..\..\src\engine\input\Input.cpp" />
+    <ClCompile Include="..\..\src\engine\utils\Discord.cpp" />
+    <ClCompile Include="..\..\src\engine\utils\Log.cpp" />
+    <ClCompile Include="..\..\src\engine\utils\Paths.cpp" />
     <ClCompile Include="..\..\src\gameName\states\BaseState.cpp" />
     <ClCompile Include="..\..\src\gameName\states\PlayState.cpp" />
     <ClCompile Include="..\..\src\gameName\states\VideoState.cpp" />
